<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PDF Builder App</string>
    <string name="title_activity_login" tools:ignore="ExtraTranslation">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_ok">Login OK</string>
    <string name="todo">TODO</string>
    <string name="page_6">Page 6</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>
    <string name="page_4">Page 4</string>
    <string name="page_5">Page 5</string>
    <string name="build_document">Build Document</string>
    <string name="compile_document">Compile Document</string>
    <string name="cancel_operation">OPERATION CANCELED</string>
    <string name="successful_operation">SUCCESSFUL OPERATION</string>
    <string name="document_description">Document Description</string>
</resources>
